# ML-from-scratch

./: Deep NN.py  Shallow NN.py  convnet.py  logging_plots_mlflow.ipynb  mlflow_quickstart.py  mlflow_registry.py  pyproject.toml  search_models.db  search_runs.ipynb
LinearRegression/: LinearRegression.ipynb
SupervisedLearning/: LinearRegression.ipynb  LogisticRegression.ipynb
